Fix overflow for long words (#261)

--- a/resources/public/css/highlight.css
+++ b/resources/public/css/highlight.css
@@ -7,6 +7,9 @@ pre code.hljs {
   display: block;
   overflow-x: auto;
   padding: 1rem;
+  border-style: groove;
+  border-width: 1px;
+  border-color: var(--button-primary-color);
 }
 
 code.hljs {
